// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FromConfiguratonHoc should render components with state 1`] = `
HTMLCollection [
  <div
    class="test"
  >
    <span
      data-testid="current"
    >
      Current value: 0
    </span>
    <button>
      +1
    </button>
    <button>
      -1
    </button>
    <button>
      Reset
    </button>
  </div>,
]
`;

exports[`FromConfiguratonHoc should render static components 1`] = `
HTMLCollection [
  <div
    class="test"
  >
    Tests
  </div>,
]
`;
